--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "devDependencies": {
     "@wxt-dev/module-vue": "^1.0.0",
+    "sass": "^1.77.8",
     "typescript": "^5.5.4",
     "vue-tsc": "^2.0.29",
     "wxt": "^0.19.1"
