--- a/package.json
+++ b/package.json
@@ -15,12 +15,15 @@
     "postinstall": "wxt prepare"
   },
   "dependencies": {
-    "vue": "^3.4.34"
+    "vue": "^3.4.34",
+    "vuetify": "^3.6.14"
   },
   "devDependencies": {
+    "@mdi/font": "^7.4.47",
     "@wxt-dev/module-vue": "^1.0.0",
     "sass": "^1.77.8",
     "typescript": "^5.5.4",
+    "vite-plugin-vuetify": "^2.0.4",
     "vue-tsc": "^2.0.29",
     "wxt": "^0.19.1"
   }
